--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
 </head>
 
@@ -18,11 +19,26 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item">
-                            <a class="header__link" href="#"></a>
+                            <a class="header__link" href="#">Рассчитайте вашу экономию</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">Сократите расходы на топливо</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">8 (800) 200-97-09</a>
                         </li>
                     </ul>
                 </nav>
+                <div class="header__login-box login">
+                    <span class="login__first-info">
+                        Связаться с нами
+                    </span>
+                    <span class="login__link-box">
+                        <a class="login__link" href="#">Личный кабинет</a>
+                    </span>
+                </div>
             </div>
+            <hr>
         </div>
     </header>
     <!-- site__header part finished -->
