Add new wrapper

--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
                 </div>
             </div>
             <hr>
+            <div class="header__secend-wrapper">
+                <nav class="header__secend-nav">
+                    <ul class="header__secend-list">
+                        <li class="header__secend-item">
+                            <a class="header__secend-link" href="#">Партнерская программа</a>
+                        </li>
+                        <li class="header__secend-item">
+                            <a class="header__secend-link" href="#">Карта заправок</a>
+                        </li>
+                        <li class="header__secend-item">
+                            <a class="header__secend-link" href="#">Клиентам</a>
+                        </li>
+                        <li class="header__secend-item">
+                            <a class="header__secend-link" href="#">Поставщикам</a>
+                        </li>
+                        <li class="header__secend-item">
+                            <a class="header__secend-link-after" href="#">еще</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <!-- site__header part finished -->
