Add new section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <a class="header__secend-link" href="#">Поставщикам</a>
                         </li>
                         <li class="header__secend-item">
-                            <a class="header__secend-link-after" href="#">еще</a>
+                            <a class="header__secend-link" href="#">еще</a>
                         </li>
                     </ul>
                 </nav>
@@ -63,6 +63,26 @@
         </div>
     </header>
     <!-- site__header part finished -->
+
+    <!-- site-main part started -->
+    <main class="site__main">
+        <!-- fueltime__section part started -->
+        <section class="fueltime__section fueltime">
+            <div class="container">
+                <div class="fueltime__wrapper">
+                    <ul class="fueltime__list">
+                        <li class="fueltime__item">
+                            <h2 class="fueltime__title">
+                                FuelTime: экономия в каждой капле
+                            </h2>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- fueltime__section part finished -->
+    </main>
+    <!-- site-main part finished -->
 </body>
 
 </html>
