add new section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,20 @@
                             <h2 class="fueltime__title">
                                 FuelTime: экономия в каждой капле
                             </h2>
+                            <span class="fueltime__info">
+                                Все в одном приложении: заказывайте топливо, <br> заправляйте транспорт на мобильных и
+                                стационарных <br> АЗС, контролируйте расход и оптимизируйте маршруты
+                            </span>
                         </li>
                     </ul>
+                    <div class="fueltime__try-box">
+                        <span class="fueltime__try-link-box">
+                            <a class="fueltime__try-link" href="#">Попробовать</a>
+                        </span>
+                        <span class="fueltime__try-dowload-box">
+                            <a class="fueltime__try-dowload-link" href="#">Скачать приложение</a>
+                        </span>
+                    </div>
                 </div>
             </div>
         </section>
